server/sonar-web/src/main/js/app/styles/components/list-groups.css
/*
 * SonarQube
 * Copyright (C) 2009-2022 SonarSource SA
 * mailto:info AT sonarsource DOT com
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
.list-group {
  margin-bottom: 20px;
  padding-left: 0;
}

.list-group-item,
button.list-group-item {
  position: relative;
  z-index: var(--normalZIndex);
  display: block;
  margin-bottom: -1px;
  padding: 5px 10px;
  border: 1px solid transparent;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
}

.list-group-item.depth-1 {
  padding-left: 31px;
}

.list-group-item.depth-2 {
  padding-left: 51px;
}

.list-group-item.depth-3 {
  padding-left: 71px;
}

.list-group-item:last-child {
  margin-bottom: 0;
}

.list-group-item.active,
.list-group-item.active:hover,
.list-group-item.active:focus {
  z-index: var(--aboveNormalZIndex);
  border-color: var(--blue) !important;
  background-color: var(--lightBlue);
}

.list-group-item:hover {
  z-index: var(--aboveNormalZIndex);
  border-color: var(--blue) !important;
}

.list-group-item + .list-group-item {
  border-top-color: var(--barBorderColor);
}

a.list-group-item {
  color: var(--baseFontColor);
  transition: none;
}

.list-group-item-heading {
  margin-top: 5px;
  margin-bottom: 5px;
}

.list-group-item-heading:after {
  content: '';
  display: table;
  clear: both;
}

